2008-01-21  Roger Leigh  <rleigh@debian.org>

	* bin/sbuild: Rename "Session Managed" to "Session Cloned".

	* lib/Sbuild/Chroot.pm (init): Rename "Session Managed" to
	"Session Cloned".

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Sbuild.pm: Add parse_date function (from WannaBuild.pm).

	* Makefile.am (SUBDIRS): Add src.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* etc/wanna-build.conf: Correct comments.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Dump version to 0.57.1.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* src/buildd-mail-wrapper.c, src/wanna-build-mail.c: Remove
	shebang in comment boilerplate.

	* configure.ac: Generate new Makefiles.

	* src/Makefile.am: Build buildd-mail-wrapper and wanna-build-mail.

	* lib/Makefile.am (SUBDIRS): Add Buildd and WannaBuild.

	* lib/Buildd/Makefile.am, lib/WannaBuild/Makefile.am: New files.
	Install perl modules.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Buildd.pm: Remove read_config function (replaced by
	Buildd::Conf).  Remove isin and binNMU_version functions also
	implemented in Sbuild.pm.

2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Sbuild.pm: Add isin function.

2008-01-06  Roger Leigh  <rleigh@debian.org>

	* bin/wanna-build: use Sbuild.pm.

	* lib/WannaBuild.pm: Remove (replaced by Sbuild.pm).

2008-01-06  Roger Leigh  <rleigh@debian.org>

	* Merge buildd repository.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* Version 0.57.0.

	* lib/Sbuild/Makefile.am: Install Sysconfig.pm.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* bin/Makefile.am: Create sbuild-adduser and sbuild-createchroot
	compatibility symlinks to $(sbindir).

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* NEWS: Add changes.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* Makefile.am: Distribute all scripts and files.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* man/sbuild-stats.1.in: Rename from avg-pkg-build-time.1.in.