@@ -29,6 +29,8 @@ BEGIN {
 use strict;
 use POSIX;
 use Buildd;
+use Buildd::Conf;
+use Sbuild;
 use Cwd;
 sub ST_MTIME() { 9 }
 
@@ -48,30 +50,6 @@ my @config_g_stats = stat( $my_config_global );
 die "Cannot stat $my_config_global: $!\n" if !@config_g_stats;
 my $my_config_g_time = $config_g_stats[ST_MTIME];
 
-read_config();
-
-$conf::delay_after_give_back ||= 8*60;
-$conf::idle_sleep_time ||= 5*60;
-@conf::take_from_dists = @distlist if !@conf::take_from_dists;
-$conf::wanna_build_user ||= $Buildd::username;
-$conf::apt_get ||= "/usr/bin/apt-get";
-$conf::sudo ||= "/usr/bin/sudo";
-
-if ($conf::sshcmd) {
-    if ($conf::sshcmd =~ /-l\s*(\S+)\s+(\S+)/) {
-	($main::sshuser, $main::sshhost) = ($1, $2);
-    }
-    elsif ($conf::sshcmd =~ /(\S+)\@(\S+)/) {
-	($main::sshuser, $main::sshhost) = ($1, $2);
-    }
-    else {
-	$conf::sshcmd =~ /(\S+)\s*$/;
-	($main::sshuser, $main::sshhost) = ("", $1);
-    }
-    if ($conf::sshsocket) {
-	$conf::sshcmd .= " -S $conf::sshsocket";
-    }
-}
 
 chdir( "$main::HOME/build" )
     or die "Can't cd to $main::HOME/build: $!\n";
@@ -135,7 +113,7 @@ MAINLOOP: while( 1 ) {
     my %binNMUlog;
     do {
 	$thisdone = 0;
-	foreach $dist (@conf::take_from_dists) {
+	foreach $dist (@Conf::take_from_dists) {
 	    check_restart();
 	    check_reread_config();
 	    my @redo = get_from_REDO( $dist, \%binNMUlog );
@@ -146,23 +124,23 @@ MAINLOOP: while( 1 ) {
 	}
     } while( $thisdone );
 
-    foreach $dist (@conf::take_from_dists) {
+    foreach $dist (@Conf::take_from_dists) {
 	check_restart();
 	check_reread_config();
 	my %givenback = read_givenback();
-	if (!open( PIPE, "$conf::sshcmd wanna-build --list=needs-build --dist=$dist ".
-		   ($conf::wanna_build_dbbase ?
-		    "--database=$conf::wanna_build_dbbase ":"").
-		   ($conf::wanna_build_user?"--user=$conf::wanna_build_user " : "")."2>&1 |" )) {
+	if (!open( PIPE, "$Conf::sshcmd wanna-build --list=needs-build --dist=$dist ".
+		   ($Conf::wanna_build_dbbase ?
+		    "--database=$Conf::wanna_build_dbbase ":"").
+		   ($Conf::wanna_build_user?"--user=$Conf::wanna_build_user " : "")."2>&1 |" )) {
 	    logger( "Can't spawn wanna-build --list=needs-build: $!\n" );
 	    next MAINLOOP;
 	}
 	my(@todo, $total, $nonex, @lowprio_todo, $max_build);
-	$max_build = $conf::max_build;
+	$max_build = $Conf::max_build;
 	while( <PIPE> ) {
-	    if ($conf::sshsocket and (/^Couldn't connect to $conf::sshsocket: Connection refused[\r]?$/ or
-				      /^Control socket connect\($conf::sshsocket\): Connection refused[\r]?$/)) {
-		unlink( $conf::sshsocket );
+	    if ($Conf::sshsocket and (/^Couldn't connect to $Conf::sshsocket: Connection refused[\r]?$/ or
+				      /^Control socket connect\($Conf::sshsocket\): Connection refused[\r]?$/)) {
+		unlink( $Conf::sshsocket );
 		check_ssh_master();
 	    }
 	    elsif (/^Total (\d+) package/) {
@@ -176,14 +154,14 @@ MAINLOOP: while( 1 ) {
 	    next if @todo >= $max_build;
 	    my @line = (split( /\s+/, $_));
 	    my $pv = $line[0];
-	    next if $conf::no_build_regex && $pv =~ m,$conf::no_build_regex,;
-	    next if $conf::build_regex && $pv !~ m,$conf::build_regex,;
+	    next if $Conf::no_build_regex && $pv =~ m,$Conf::no_build_regex,;
+	    next if $Conf::build_regex && $pv !~ m,$Conf::build_regex,;
 	    $pv =~ s,^.*/,,;
 	    my $p;
 	    ($p = $pv) =~ s/_.*$//;
-	    next if isin( $p, @conf::no_auto_build );
+	    next if isin( $p, @Conf::no_auto_build );
 	    next if $givenback{$pv};
-	    if (isin( $p, @conf::weak_no_auto_build )) {
+	    if (isin( $p, @Conf::weak_no_auto_build )) {
 		push( @lowprio_todo, $pv );
 		next;
 	    }
@@ -201,8 +179,8 @@ MAINLOOP: while( 1 ) {
 	    next;
 	}
 	logger( "$dist: total $total packages to build.\n" ) if $total;
-	if ($total && $conf::secondary_daemon_threshold &&
-	    $total < $conf::secondary_daemon_threshold) {
+	if ($total && $Conf::secondary_daemon_threshold &&
+	    $total < $Conf::secondary_daemon_threshold) {
 	    logger( "Not enough packages to build -- ".
 		    "secondary daemon not starting\n" );
 	    next;
@@ -223,9 +201,9 @@ MAINLOOP: while( 1 ) {
 
     # sleep a little bit if there was nothing to do this time
     if (!$done) {
-	logger( "Nothing to do -- sleeping $conf::idle_sleep_time seconds\n" );
+	logger( "Nothing to do -- sleeping $Conf::idle_sleep_time seconds\n" );
 	my $idle_start_time = time;
-	sleep( $conf::idle_sleep_time );
+	sleep( $Conf::idle_sleep_time );
 	my $idle_end_time = time;
 	write_stats( "idle-time", $idle_end_time - $idle_start_time );
     }
@@ -252,7 +230,7 @@ sub get_from_REDO {
 		"Raw contents:\n@lines\n" );
 	goto end;
     }
-    my $max_build = $conf::max_build;
+    my $max_build = $Conf::max_build;
     foreach (@lines) {
 	if (!/^(\S+)\s+(\S+)(?:\s*|\s+(\d+)\s+(\S.*))?$/) {
 	    logger( "Ignoring/deleting bad line in REDO: $_" );
@@ -298,7 +276,7 @@ sub read_givenback {
 
     if (open( F, ">SBUILD-GIVEN-BACK" )) {
 	foreach (keys %gb) {
-	    if ($now - $gb{$_} > $conf::delay_after_give_back*60) {
+	    if ($now - $gb{$_} > $Conf::delay_after_give_back*60) {
 		delete $gb{$_};
 	    }
 	    else {
@@ -324,9 +302,9 @@ sub do_wanna_build {
     local( *PIPE );
 
     block_signals();
-    if (open( PIPE, "$conf::sshcmd wanna-build -v --no-down-propagation ".
-	      ($conf::wanna_build_dbbase?"--database=$conf::wanna_build_dbbase ":"").
-	      ($conf::wanna_build_user?"--user=$conf::wanna_build_user ":"").
+    if (open( PIPE, "$Conf::sshcmd wanna-build -v --no-down-propagation ".
+	      ($Conf::wanna_build_dbbase?"--database=$Conf::wanna_build_dbbase ":"").
+	      ($Conf::wanna_build_user?"--user=$Conf::wanna_build_user ":"").
 	      "--dist=$dist @_ 2>&1 |" )) {
 	while( <PIPE> ) {
 	    next if /^wanna-build Revision/;
@@ -345,7 +323,7 @@ sub do_wanna_build {
 	    elsif (/^(\S+):.*previous version failed/i) {
 		my $pkg = $1;
 		++$n;
-		if ($conf::should_build_msgs) {
+		if ($Conf::should_build_msgs) {
 		    handle_prevfailed( $dist, grep( /^\Q$pkg\E_/, @_ ) );
 		} else {
 		    push( @output, grep( /^\Q$pkg\E_/, @_ ) );
@@ -390,7 +368,7 @@ sub do_build {
     my $free_space;
     my $chroot_apt_options;
 
-    while (($free_space = df(".")) < $conf::min_free_space) {
+    while (($free_space = df(".")) < $Conf::min_free_space) {
 	logger( "Delaying build, because free space is low ($free_space KB)\n" );
 	my $idle_start_time = time;
 	sleep( 10*60 );
@@ -427,9 +405,9 @@ sub do_build {
 	}
     }
 
-    if (-x "$conf::apt_get") {
+    if (-x "$Conf::apt_get") {
 	my $mtime = (stat(((-d "chroot-$dist" ? "chroot-$dist" : "") . "/var/cache/apt/pkgcache.bin")))[ST_MTIME];
-	my $log = `$conf::sudo $conf::apt_get -qq $chroot_apt_options update 2>&1`;
+	my $log = `$Conf::sudo $Conf::apt_get -qq $chroot_apt_options update 2>&1`;
 	if ($?) {
 	    logger( "Error on updating apt sources for $dist:\n$log" )
 		if $log;
@@ -442,9 +420,9 @@ sub do_build {
 	    # them back, or fail them.
 	    if (($log =~ /^E: dpkg was interrupted, you must manually run 'dpkg --configure -a' to correct the problem./mi) ||
 		($log =~ /^E: Unmet dependencies. Try 'apt-get -f install' with no packages \(or specify a solution\)\./mi)) {
-		for (my $i = 0; $i < @conf::take_from_dists ; $i++ ) {
-		    if ($conf::take_from_dists[$i] eq $dist) {
-			splice (@conf::take_from_dists,$i,1);
+		for (my $i = 0; $i < @Conf::take_from_dists ; $i++ ) {
+		    if ($Conf::take_from_dists[$i] eq $dist) {
+			splice (@Conf::take_from_dists,$i,1);
 			logger( "Removing $dist from building; env. broken" );
 		    }
 		}
@@ -453,7 +431,7 @@ sub do_build {
 	else {
 	    logger( $log ? $log : "Updated apt sources for $dist\n" );
 	    if ((stat(((-d "chroot-$dist" ? "chroot-$dist" : "") . "/var/cache/apt/pkgcache.bin")))[ST_MTIME] > $mtime) {
-		$log = `$conf::sudo $conf::apt_get -qq $chroot_apt_options autoclean 2>&1`;
+		$log = `$Conf::sudo $Conf::apt_get -qq $chroot_apt_options autoclean 2>&1`;
 		logger( $log ? $log : "Autocleaned apt cache directory for $dist\n" );
 	    }
 	}
@@ -463,14 +441,14 @@ sub do_build {
     write_stats( "builds", scalar(@_) );
     my $binNMUver;
 
-    my @sbuild_args = ( 'nice', '-n', "$conf::nice_level", 'sbuild',
+    my @sbuild_args = ( 'nice', '-n', "$Conf::nice_level", 'sbuild',
 			'--batch', "--stats-dir=$main::HOME/stats",
 			"--dist=$dist" );
     my $sbuild_gb = '--auto-give-back';
-    if ($conf::sshcmd) {
+    if ($Conf::sshcmd) {
 	$sbuild_gb .= "=";
-	$sbuild_gb .= "$conf::sshsocket\@" if $conf::sshsocket;
-	$sbuild_gb .= "$conf::wanna_build_user\@" if $conf::wanna_build_user;
+	$sbuild_gb .= "$Conf::sshsocket\@" if $Conf::sshsocket;
+	$sbuild_gb .= "$Conf::wanna_build_user\@" if $Conf::wanna_build_user;
 	$sbuild_gb .= "$main::sshuser\@" if $main::sshuser;
 	$sbuild_gb .= "$main::sshhost";
     } else {
@@ -479,8 +457,8 @@ sub do_build {
 	$sbuild_gb .= "=yes"
     }
     push ( @sbuild_args, $sbuild_gb );
-    push ( @sbuild_args, "--database=$conf::wanna_build_dbbase" )
-	if $conf::wanna_build_dbbase;
+    push ( @sbuild_args, "--database=$Conf::wanna_build_dbbase" )
+	if $Conf::wanna_build_dbbase;
 
     if (scalar(@_) == 1 and $_[0] =~ s/^!(\d+)!//) {
 	$binNMUver = $1;
@@ -551,7 +529,7 @@ sub do_build {
 	if (++$main::sbuild_fails > 2) {
 	    logger( "sbuild now failed $main::sbuild_fails times in ".
 		    "a row; going to sleep\n" );
-	    send_mail( $conf::admin_mail,
+	    send_mail( $Conf::admin_mail,
 		       "Repeated mess with sbuild",
 		       <<EOF );
 The execution of sbuild now failed for $main::sbuild_fails times.
@@ -585,8 +563,8 @@ sub handle_prevfailed {
 
     logger( "$pkgv previously failed -- asking admin first\n" );
     ($pkg = $pkgv) =~ s/_.*$//;
-    $fail_cmd = "$conf::sshcmd wanna-build ".($conf::wanna_build_dbbase?
-					      "--database=$conf::wanna_build_dbbase ":""). "--info --dist=$dist $pkg";
+    $fail_cmd = "$Conf::sshcmd wanna-build ".($Conf::wanna_build_dbbase?
+					      "--database=$Conf::wanna_build_dbbase ":""). "--info --dist=$dist $pkg";
     $fail_msg = `$fail_cmd`;
 
     {
@@ -595,7 +573,7 @@ sub handle_prevfailed {
     }
     $changelog = "ERROR: FTP timeout" if $@;
 
-    send_mail( $conf::admin_mail,
+    send_mail( $Conf::admin_mail,
 	       "Should I build $pkgv (dist=$dist)?",
 	       "The package $pkg failed to build in a previous version. ".
 	       "The fail\n".
@@ -639,14 +617,14 @@ retry:
 					      "-o Dir::Etc=$absroot/etc/apt ";
     }
 
-    $msg = `$conf::apt_get $chroot_apt_options -q -d --diff-only source $n=$v 2>&1`;
+    $msg = `$Conf::apt_get $chroot_apt_options -q -d --diff-only source $n=$v 2>&1`;
     if ($? == 0 && $msg !~ /get 0B/) {
 	$analyze = "diff";
 	$file = "${n}_${v_ne}.diff.gz";
     }
 
     if (!$analyze) {
-	$msg = `$conf::apt_get $chroot_apt_options -q -d --tar-only source $n=$v 2>&1`;
+	$msg = `$Conf::apt_get $chroot_apt_options -q -d --tar-only source $n=$v 2>&1`;
 	if ($? == 0 && $msg !~ /get 0B/) {
 	    $analyze = "tar";
 	    $file = "${n}_${v_ne}.tar.gz";
@@ -654,7 +632,7 @@ retry:
     }
 
     if (!$analyze && !$retried) {
-	system "$conf::sudo $conf::apt_get ".
+	system "$Conf::sudo $Conf::apt_get ".
 	    "-qq $chroot_apt_options update &>/dev/null";
 	$retried = 1;
 	goto retry;
@@ -814,9 +792,9 @@ sub check_reread_config {
 	$my_config_g_time = $stats_g[ST_MTIME];
 	delete $INC{$my_config};
 	delete $INC{$my_config_global};
-	read_config();
-	if ($conf::sshsocket) {
-	    $conf::sshcmd .= " -S $conf::sshsocket";
+	Build::Conf::read();
+	if ($Conf::sshsocket) {
+	    $Conf::sshcmd .= " -S $Conf::sshsocket";
 	}
 	$main::reread_config = 0;
     }
@@ -831,8 +809,8 @@ sub unblock_signals() {
 }
 
 sub check_ssh_master {
-    return 1 if (!$conf::sshsocket);
-    return 1 if ( -S $conf::sshsocket );
+    return 1 if (!$Conf::sshsocket);
+    return 1 if ( -S $Conf::sshsocket );
 
     if ($main::ssh_pid)
     {
@@ -841,14 +819,14 @@ sub check_ssh_master {
     }
 
     ($main::ssh_pid = fork)
-	or exec "$conf::sshcmd -MN";
+	or exec "$Conf::sshcmd -MN";
 
     if (!defined $main::ssh_pid) {
 	logger( "Cannot fork for ssh master: $!\n" );
 	return 0;
     }
 
-    while ( ! -S $conf::sshsocket )
+    while ( ! -S $Conf::sshsocket )
     {
 	sleep 1;
 	my $wpid = waitpid ( $main::ssh_pid, WNOHANG );
