@@ -27,14 +27,16 @@ BEGIN {
 
 use strict;
 use Buildd;
+use Buildd::Conf;
 use POSIX qw(ESRCH LONG_MAX);
 use Cwd;
+
 sub ST_MTIME() { 9 }
 $ENV{'PATH'} = "$main::HOME/bin:/usr/bin:/bin:/usr/local/bin";
 my $fudge = 1/24/6; # 10 minutes in units of a day
 my $username = (getpwuid($<))[0] || $ENV{'LOGNAME'} || $ENV{'USER'};
 
-read_config();
+unset_env();
 chdir( "$main::HOME" );
 open_log();
 
